sandc/test/fixtures/astRegression/shouldFail/productions/parenthesizedFormalMethodDeclarations/ShadowPropertySetter.sand
pub class ShadowPropertySetter {
    foo(shadow this.foo: int) {
        
    }
}